# echostream

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/echostream/: Cargo.toml  README.md
crates/echostream-core/: Cargo.toml  README.md
crates/echostream-derive/: Cargo.toml  README.md
crates/echostream-discovery/: Cargo.toml  README.md
crates/echostream-proto/: Cargo.toml  README.md
crates/echostream-proto/src/: context.rs  error.rs  handler.rs  lib.rs  message.rs  session.rs
crates/echostream-proto/src/traits/: container.rs  lifecycle.rs  listenable.rs  mod.rs  stateful.rs
crates/echostream-transport/: Cargo.toml  README.md
crates/echostream-transport/src/: lib.rs
crates/echostream-types/: Cargo.toml  README.md
crates/echostream-types/src/: lib.rs
crates/echostream/src/: lib.rs
docs/: API_DESIGN.md  ARCHITECTURE.md  CHANGELOG.md  MODULE_RESPONSIBILITIES.md  README.md  ROADMAP.md  core.md
examples/: README.md
history/: 0.plan.md  1.refine.md  2.spec.md
middlewares/: README.md
plugins/: README.md
sdk/: README.md
