[package]
name = "echostream-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "核心抽象层：调度器、插件系统、中间件、时间同步"

[dependencies]
echostream-proto = { workspace = true }
echostream-transport = { workspace = true }

tokio = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
