[package]
name = "echostream-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "底层协议定义和基础类型"

[dependencies]
async_trait =  { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
